# weld-defect-detection

./: .gitignore  README.md  pyproject.toml
src/weld_pipeline/: cracks_check.py  detector.py  discontinuity_assessment.py  discontinuity_check.py  main copy.py  main.py  moondream_test.py  porosity_check.py  script.py  utils.py  visualization.py  visualizer.py  vlm.py
